# packet

./: Cargo.toml  README.md  run.sh
build-aux/: io.github.nozwock.Packet.Devel.json
data/: io.github.nozwock.Packet.Api.service.in  io.github.nozwock.Packet.gschema.xml.in  meson.build
data/resources/: meson.build  resources.gresource.xml
data/resources/ui/: shortcuts-dialog.blp  window.blp
po/: LINGUAS  POTFILES.in  hr.po  packet.pot  pl.po
src/: application.rs  ext.rs  main.rs  tray.rs  utils.rs  window.rs
src/objects/: send_transfer.rs
src/widgets/: file_card.rs  receive_transfer.rs  recipient_card.rs
