[package]
name = "packet"
authors = ["nozwock"]
edition = "2024"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.10", package = "gtk4", features = ["v4_20"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_8"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rqs_lib = { git = "https://github.com/nozwock/rquickshare.git", rev = "17702edc9f8b0d1e67c50f125e03ca3f8c291f3c", default-features = false, features = [
    "experimental",
] }
better_default = "1.0.5"
fs-err = "3.1"
anyhow = { version = "1.0" }
tokio = { version = "1.45.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "io-util",
    "signal",
] }
whoami = "1.6.0"
async-channel = "2.3.1"
dirs = "6.0.0"
formatx = "0.2.4"
human_bytes = { version = "0.4.3", default-features = false }
port_scanner = "0.1.5"
zbus = "5.7.1"
futures-lite = "2.6.0"
ashpd = { version = "0.12", default-features = false, features = [
    "async-std",
    "gtk4",
] }
futures-timer = "3.0.3"
tokio-util = "0.7.15"
tracing-appender = "0.2.3"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", default-features = false, features = ["async-io"] }
